<resources>
    <string name="app_name">Coinz</string>
    <string name="access_token">pk.eyJ1IjoiYWp5eSIsImEiOiJjam14cXd3bHEza2N3M3BueHlrZXp4dG1wIn0.y9DB_p5jKf3uoVxqRwR61Q</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="central_bank_name">Central Bank</string>
    <string name="friends_nav_name">Friends</string>
    <string name="communicate_name">Communicate</string>
    <string name="share_nav_name">Share</string>
    <string name="navigation_descrip">Navigation Head</string>
    <string name="user_name">SetYourName</string>
    <string name="user_email">SetYourEmail</string>
    <string name="logo_description">This is the logo</string>
    <string name="user_name_hint">please enter your email</string>
    <string name="user_password_hint">please enter your password</string>
    <string name="btn_login_text">Login or Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_sign_up_name">Sign Up</string>
    <string name="nav_log_out_name">Log Out</string>
    <string name="nav_profile_name">Profile</string>
    <string name="tv_age_name">Age</string>
    <string name="tv_name_name">Name</string>
    <string name="tv_gender_name">Gender</string>
    <string name="rbtn_female_name">Female</string>
    <string name="rbtn_male_name">Male</string>
    <string name="btn_submit_name">Submit</string>
    <string name="rbtn_Unknown_Name">Unknown</string>
    <string name="tv_Email_name">Email</string>
    <string name="btn_send_reset_email_name">Send Reset Email</string>
    <string name="etReEmail_please_enter_your_email_hint">please enter your email</string>
    <string name="picture_descr">friand avator</string>
    <string name="nav_balance_name">Balance</string>
    <string name="btntime_text">Time Deposit</string>
    <string name="btndeposit_text">Deposit</string>
    <string name="btn_rate_name">Today\'s Rates</string>
    <string name="text_view_deposit_name">Deposit Your Money</string>
    <string name="demand_deposit_text_name">Demand Deposit</string>
    <string name="time_deposit_text_name">Time Deposit</string>
    <string name="time_deposit_note_textview">Note: the time deposit rate is 5%</string>
    <string name="btn_history_name">History</string>
    <string name="add_friend_search_info_blank">Please enter the name</string>
    <string name="hint_for_choose_coind">Please choose coins</string>
    <string name="deposit_inf_choose_date">Please choose the expired date</string>
    <string name="deposit_inf_choose_some_coins_time">Please choose some coins or enter the amount from your demand deposit</string>
    <string name="deposit_inf_choose_coins_demand">Please choose some coins</string>
    <string name="exchange_inf_less_than_balance">Amount Should be smaller than your balance</string>
    <string name="exchange_inf_larger_than_zero">Amount should be larger than 0</string>
    <string name="user_profile_hint1">Please enter the name</string>
    <string name="user_profile_hint2">Please enter age</string>
    <string name="reset_password_hint1">Enter You Email</string>
    <string name="reset_password_hint2">This email is not registered</string>
    <string name="reset_password_hint3">Reset Email Sent</string>
    <string name="reset_password_hint4">Reset Email fail to send</string>
    <string name="spare_exchenge_inf_hint1">Please choose coins</string>
    <string name="user_profile_hint3">The age should be larger than 0!</string>
    <string name="the_cup_image">The cup image</string>
    <string name="enter_the_name_of_your_friend">enter the name of your friend</string>
    <string name="welcome_to">Welcome to</string>
    <string name="central_bank">Central Bank</string>
    <string name="demand_deposit">Demand Deposit</string>
    <string name="deposit">Deposit</string>
    <string name="balance">Balance</string>
    <string name="deposit_your_money">Deposit Your Money</string>
    <string name="coins_type">Coins\' Type</string>
    <string name="choose_your_coins">Choose Your CoIns</string>
    <string name="from_your_demand_deposit">From Your Demand Deposit</string>
    <string name="end_time">End Time</string>
    <string name="calendar">Calendar</string>
    <string name="from">From</string>
    <string name="coin_s_type">Coin\'s type</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="button">Button</string>
    <string name="friend_picture">friend picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="spare_change">Spare Change</string>
    <string name="enter_your_friend_s_name">Enter your friend\'s name…</string>
    <string name="search">Search</string>
    <string name="exchange">Exchange</string>
    <string name="quid">QUID</string>
    <string name="dolr">DOLR</string>
    <string name="shil">SHIL</string>
    <string name="peny">PENY</string>
    <string name="choose_your_coin">Choose your coin</string>
    <string name="your_coins">Your coins</string>
    <string name="submit">Submit</string>
    <string name="time_deposit">Time Deposit</string>
    <string name="interest_rate_update_in_12_11_2018">Interest Rate (Update in 12/11/2018):</string>
    <string name="less_than_1_week_5_0">Less Than 1 Week: 5.0%</string>
    <string name="_1_3_weeks_10_0">1–3 Weeks: 10.0%</string>
    <string name="_4_6_weeks_20_0">4–6 Weeks: 20.0%</string>
    <string name="more_than_6_weeks_40_0">More than 6 Weeks: 40.0%</string>
    <string name="the_coin_image">The coin image</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="your_balance">Your Balance</string>
    <string name="exchange_rates">Exchange Rates:</string>
    <string name="_0_0">0.0</string>
    <string name="map_coins_information">Map Coins Information</string>
    <string name="submit_message">submit message</string>
    <string name="enter_your_message">enter your message…</string>
    <string name="forget_password">Forget Password?</string>
    <string name="you_have_exchanged_today">You have exchanged today!</string>
    <string name="please_deposit_enough_money">Please deposit enough money today</string>
    <string name="the_amount_should_be_less_than_balance">The amount should be less than balance!</string>
</resources>
