<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/nav_money"
            android:title="@string/balance_name" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/nav_friend"
            android:title="@string/friends_nav_name" />
    </group>

    <item android:title="@string/communicate_name">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/nav_share"
                android:title="@string/share_nav_name" />
        </menu>
    </item>
</menu>