<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bank_background"
    android:orientation="vertical"
    tools:context=".CentralBankActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/welcome_to"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/central_bank"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_money_deposit"
        android:elevation="5dp"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:text="@string/btndeposit_text"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_exchange_rate"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:text="@string/exchange"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/btnSpareChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_exchange"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:text="@string/spare_change"
        android:textColor="@color/buttonTextColor" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_history"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:text="@string/btn_history_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>