<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInterface">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="155dp"
        android:layout_height="147dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/user_name_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/btn_login_text"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>