<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DepositActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_view_deposit_name"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btnTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_time_deposit"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:elevation="5dp"
        android:text="@string/time_deposit_text_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/btnDemand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_demand_deposit"
        android:paddingStart="30dp"
        android:paddingEnd="45dp"
        android:elevation="5dp"
        android:text="@string/demand_deposit_text_name"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>